--- a/config/kitty.conf
+++ b/config/kitty.conf
@@ -1,6 +1,6 @@
 shell /usr/bin/zsh
 
-kitty_mod alt
+kitty_mod ctrl+shift
 
 # FONTS
 font_family      Hack
@@ -15,7 +15,7 @@ font_size 11
 window_margin_width 3
 window_border_width 1pt
 single_window_margin_width 0
-background_image ~/Images/Wallpapers/dracula_1.png
+background_image ~/.config/kitty/background.png
 background_image_layout scaled
 background_tint 0.85
 background_tint_gaps -10
