--- a/config/kitty.conf
+++ b/config/kitty.conf
@@ -17,7 +17,7 @@ window_border_width 1pt
 single_window_margin_width 0
 background_image ~/.config/kitty/background.png
 background_image_layout scaled
-background_tint 0.85
+background_tint 0.90
 background_tint_gaps -10
 
 # TABS
@@ -35,3 +35,6 @@ map kitty_mod+down neighboring_window down
 # Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
+
+# Interactive tab renaming
+map f2 set_tab_title
