--- a/config/kitty.conf
+++ b/config/kitty.conf
@@ -38,3 +38,10 @@ include current-theme.conf
 
 # Interactive tab renaming
 map f2 set_tab_title
+
+enabled_layouts fat,horizontal,vertical,grid,splits
+
+map shift+up move_window up
+map shift+left move_window left
+map shift+right move_window right
+map shift+down move_window down
