--- a/config/kitty.conf
+++ b/config/kitty.conf
@@ -20,6 +20,8 @@ background_image_layout scaled
 background_tint 0.90
 background_tint_gaps -10
 
+hide_window_decorations yes
+
 # TABS
 tab_bar_style powerline
 tab_powerline_style slanted
