--- a/config/kitty.conf
+++ b/config/kitty.conf
@@ -20,11 +20,9 @@ background_image_layout scaled
 background_tint 0.90
 background_tint_gaps -10
 
-#hide_window_decorations yes
-
 # TABS
 tab_bar_style powerline
-tab_powerline_style slanted
+tab_powerline_style round
 tab_activity_symbol !
 
 # MAPPING
@@ -47,3 +45,5 @@ map shift+up move_window up
 map shift+left move_window left
 map shift+right move_window right
 map shift+down move_window down
+
+hide_window_decorations yes
