--- a/config/kitty.conf
+++ b/config/kitty.conf
@@ -39,7 +39,7 @@ include current-theme.conf
 # Interactive tab renaming
 map f2 set_tab_title
 
-enabled_layouts fat,horizontal,vertical,grid,splits
+enabled_layouts fat,horizontal,vertical,grid,stack
 
 map shift+up move_window up
 map shift+left move_window left
